--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -1,11 +1,11 @@
 html {
-overflow:auto;
-font-family: 'Barlow', sans-serif;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
--ms-box-sizing: border-box;
--o-box-sizing: border-box;
-box-sizing: border-box;
+    overflow: auto;
+    font-family: 'Barlow', sans-serif;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
 
 }
 
@@ -17,7 +17,7 @@ body {
     width: 1000px;
     border: 1px solid none;
     margin: auto;
-overflow:hidden;
+    overflow: hidden;
 
 
 
@@ -27,9 +27,9 @@ overflow:hidden;
 header {
 
     padding: 0px;
-    height: 250px;
+    height: 275px;
     width: 100%;
-    background-color: #F5F5DC;
+    background-color: #90C3DF;
     padding-top: 0px;
 
 }
@@ -52,11 +52,28 @@ main {
     height: 800px;
     width: 49%;
     background-color: #F5F5F5;
-box-sizing: border-box;
+    box-sizing: border-box;
 
 
 }
 
+.left_header {
+    float: left;
+    padding-top: 5px;
+    width: 60%;
+    height: 70px;
+    box-sizing: border-box;
+
+}
+
+.right_header {
+    float: right;
+text-align: right;
+    width: 40%;
+    height: 70px;
+    box-sizing: border-box;
+
+}
 
 .right_todo {
 
@@ -65,19 +82,19 @@ box-sizing: border-box;
     padding-top: 20px;
     height: 800px;
     width: 49%;
-    background-color:#F5F5F5;
-box-sizing: border-box;
+    background-color: #F5F5F5;
+    box-sizing: border-box;
 
 }
 
 footer {
 
     float: left;
-    margin-top: 20px;
-    padding: 50px;
+    margin-top: 10px;
+    padding: 35px;
     height: 50px;
     width: 100%;
-    background-color: #F5F5DC;
+    background-color: #90C3DF;
 
 
 }
@@ -94,20 +111,70 @@ a {
 }
 
 ul {
-    list-style-type: none;
     margin: 0;
     padding: 0;
+    list-style-type: none;
+    padding-left: 0px;
+
 }
+
 
 li {
-    display: inline;
-    margin-right: 40px;
+    display: list-item;
+    padding-left: 0px;
+    word-wrap: break-word;
+
+    padding: 5px;
+    font-size: 20px;
+    font-weight: 800;
+
 }
 
-a:hover {
-    text-decoration: underline;
-    color: #000000;
+.done {
+    color: darkgreen;
+    float: right;
+    padding-right: 15px;
+
 }
+
+.close {
+    color: red;
+    float: right;
+
+}
+
+
+input[type=text] {
+    width: 50%;
+    font-size: 20px;
+    padding: 12px 20px;
+    margin: 0px 0;
+    box-sizing: border-box;
+}
+
+input[type=text]:focus {
+    border: 3px solid #555;
+}
+
+.button_style {
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 20px;
+    margin: 4px 2px;
+    opacity: 0.5;
+    transition: 0.5s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.button_style:hover {
+    opacity: 1
+}
+
 
 h1 {
     font-size: 65px;
