--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,9 +1,16 @@
-    @import "_computer.scss";
+    @import "_tablet.scss";
+
+
+header {
+
+width: 100%;
+
+}
 
 .left_todo {
 
     float: left;
-    width: 100%;
+width: 100%;
     height: 100%;
 
 }
@@ -12,14 +19,35 @@
 .right_todo {
 
     float: left;
-    width: 100%;
+width: 100%;
     height: 100%;
 
 
 }
 
 input[type=text] {
-    width: 25%;
+    width: 50%;
+}
+
+footer {
+
+width: 100%;
+
 }
 
 
+h1 {
+    font-size: 45px;
+    font-weight: 800;
+    margin: 0px;
+    display: inline;
+
+}
+
+h2 {
+    font-size: 25px;
+    font-weight: 800;
+    margin: 0px;
+    display: inline;
+
+}
