--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -13,7 +13,7 @@ html {
 body {
     margin: 0px;
     padding: 0px;
-    height: 1200px;
+    height: 100%;
     width: 1000px;
     border: 1px solid none;
     margin: auto;
