--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -22,7 +22,7 @@ header {
     padding: 0px;
     height: 500px;
     width: 100%;
-    background-color: #90C3DF;
+    background-color: #f6f6f6;
     padding-top: 0px;
 text-align: center;
 }
@@ -95,7 +95,7 @@ footer {
     padding: 35px;
     height: 50px;
     width: 100%;
-    background-color: #90C3DF;
+    background-color: #f6f6f6;
 }
 
 img {
@@ -211,7 +211,7 @@ h2 {
 }
 
 h3 {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 800;
     margin: 0px;
     display: inline;
