--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -60,7 +60,7 @@ box-sizing: border-box;
     padding-top: 20px;
     float: left;
     height: 800px;
-    width: 49%;
+    width: 100%;
     background-color: #F5F5F5;
     box-sizing: border-box;
 }
@@ -72,22 +72,22 @@ box-sizing: border-box;
     height: 70px;
     box-sizing: border-box;
 }
-
-.right_header {
-    width: 40%;
-    height: 70px;
-    box-sizing: border-box;
-}
-
-.right_card {
-    float: right;
-    padding: 40px;
-    padding-top: 20px;
-    height: 800px;
-    width: 49%;
-    background-color: #F5F5F5;
-    box-sizing: border-box;
-}
+//
+//.right_header {
+//    width: 40%;
+//    height: 70px;
+//    box-sizing: border-box;
+//}
+//
+//.right_card {
+//    float: right;
+//    padding: 40px;
+//    padding-top: 20px;
+//    height: 800px;
+//    width: 49%;
+//    background-color: #F5F5F5;
+//    box-sizing: border-box;
+//}
 
 footer {
     float: left;
@@ -97,6 +97,13 @@ footer {
     width: 100%;
     background-color: #f6f6f6;
 }
+.submit{
+  background:none;
+  border:none;
+  font-size:1em;
+  color:blue;
+}
+
 
 img {
     max-width: 100%;
@@ -127,13 +134,23 @@ ul {
 
 li {
     display: list-item;
+    list-style-type: none;
     padding-left: 0px;
     word-wrap: break-word;
-    padding: 5px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 800;
+    cursor: pointer;
+
 }
 
+li:hover, li:focus {
+    background-color: #e6e6e6;
+}
+
+li:first-letter
+{
+    text-transform: uppercase;
+}
 .done{
     display: block;
     color: darkgreen;
@@ -220,9 +237,9 @@ h3 {
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: #3498DB;
+    background-color: #2a75bb;
     color: white;
-    min-width: 300px;
+    width: 500px;
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -238,6 +255,8 @@ h3 {
 .dropdown {
     position: relative;
     display: inline-block;
+    font-size: 12px;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -245,18 +264,21 @@ h3 {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 300px;
+    width: 500px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
+///* Links inside the dropdown */
+//.dropdown-content li1 {
+//    color: black;
+//    padding: 12px 16px;
+//    text-decoration: none;
+//    display: block;
+//    font-size: 12px;
+//
+//
+//}
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd}
