--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -55,39 +55,28 @@ box-sizing: border-box;
 
 }
 
-.left_card {
-    padding: 40px;
+.middle_parent_box {
+    padding: 150px;
     padding-top: 20px;
     float: left;
     height: 800px;
     width: 100%;
     background-color: #F5F5F5;
     box-sizing: border-box;
+border: 1px solid black; 
 }
 
-.left_header {
+.middle_main_box {
     float: left;
-    padding-top: 5px;
-    width: 60%;
-    height: 70px;
+    padding-top: 20px;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
+border: 1px solid black; 
+text-align: center;
+
 }
-//
-//.right_header {
-//    width: 40%;
-//    height: 70px;
-//    box-sizing: border-box;
-//}
-//
-//.right_card {
-//    float: right;
-//    padding: 40px;
-//    padding-top: 20px;
-//    height: 800px;
-//    width: 49%;
-//    background-color: #F5F5F5;
-//    box-sizing: border-box;
-//}
+
 
 footer {
     float: left;
@@ -211,6 +200,30 @@ input[type=text]:focus {
     opacity: 1
 }
 
+.style {
+
+color: red;
+border: 1px solid black; 
+width: 100%;
+    box-sizing: border-box;
+
+}
+
+.infoElements {
+float: left;
+height: 50%;
+width: 25%;
+    text-transform: uppercase;
+    box-sizing: border-box;
+
+}
+
+p {
+
+    text-transform: uppercase;
+
+}
+
 h1 {
     font-size: 45px;
     font-weight: 800;
@@ -224,14 +237,18 @@ h2 {
     font-weight: 800;
     margin: 0px;
     display: inline;
+    text-transform: uppercase;
 
 }
+
+
 
 h3 {
     font-size: 25px;
     font-weight: 800;
     margin: 0px;
     display: inline;
+color: red;
 
 }
 
@@ -269,16 +286,6 @@ h3 {
     z-index: 1;
 }
 
-///* Links inside the dropdown */
-//.dropdown-content li1 {
-//    color: black;
-//    padding: 12px 16px;
-//    text-decoration: none;
-//    display: block;
-//    font-size: 12px;
-//
-//
-//}
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd}
