--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -5,11 +5,6 @@
         height: 350px;
     }
 
-    .left_todo {
-        float: left;
-        width: 100%;
-        height: 100%;
-    }
 
     .left_header_img {
         height: 140px;
@@ -20,6 +15,11 @@
     .right_header_img {
         height: 140px;
     }
+
+.middle_parent_box {
+    padding: 50px;
+
+}
 
     .dropbtn {
         width: 350px;
@@ -53,3 +53,10 @@
         margin: 0px;
         display: inline;
     }
+
+h3 {
+
+        font-size: 20px;
+
+
+}
