--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -63,7 +63,6 @@ box-sizing: border-box;
     width: 100%;
     background-color: #F5F5F5;
     box-sizing: border-box;
-border: 1px solid black; 
 }
 
 .middle_main_box {
@@ -72,7 +71,6 @@ border: 1px solid black;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-border: 1px solid black; 
 text-align: center;
 
 }
@@ -203,9 +201,9 @@ input[type=text]:focus {
 .style {
 
 color: red;
-border: 1px solid black; 
 width: 100%;
     box-sizing: border-box;
+padding-bottom: 20px;
 
 }
 
