--- a/sass/_computer.scss
+++ b/sass/_computer.scss
@@ -24,7 +24,7 @@ header {
     width: 100%;
     background-color: #f6f6f6;
     padding-top: 0px;
-text-align: center;
+    text-align: center;
 }
 
 .main_header {
@@ -37,20 +37,20 @@ main {
 
 .left_header_img {
 
-float: left;
-width: 70%;
-height: 250px;
-box-sizing: border-box;
+    float: left;
+    width: 70%;
+    height: 250px;
+    box-sizing: border-box;
 
 }
 
 .right_header_img {
 
-float: right;
-width: 30%;
-height: 250px;
-padding-top: 50px;
-box-sizing: border-box;
+    float: right;
+    width: 30%;
+    height: 250px;
+    padding-top: 50px;
+    box-sizing: border-box;
 
 
 }
@@ -71,7 +71,7 @@ box-sizing: border-box;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-text-align: center;
+    text-align: center;
 
 }
 
@@ -84,27 +84,18 @@ footer {
     width: 100%;
     background-color: #f6f6f6;
 }
-.submit{
-  background:none;
-  border:none;
-  font-size:1em;
-  color:blue;
+
+.submit {
+    background: none;
+    border: none;
+    font-size: 1em;
+    color: blue;
 }
 
 
 img {
     max-width: 100%;
     height: auto;
-}
-
-.logo {
-
-
-}
-
-.snorlax {
-
-
 }
 
 a {
@@ -130,15 +121,16 @@ li {
 
 }
 
-li:hover, li:focus {
+li:hover,
+li:focus {
     background-color: #e6e6e6;
 }
 
-li:first-letter
-{
+li:first-letter {
     text-transform: uppercase;
 }
-.done{
+
+.done {
     display: block;
     color: darkgreen;
     float: right;
@@ -155,7 +147,7 @@ li:first-letter
 }
 
 #done_todo .done {
-display:none
+    display: none
 }
 
 .node_class {
@@ -200,26 +192,24 @@ input[type=text]:focus {
 
 .style {
 
-color: red;
-width: 100%;
+    color: red;
+    width: 100%;
     box-sizing: border-box;
-padding-bottom: 20px;
+    padding-bottom: 20px;
 
 }
 
 .infoElements {
-float: left;
-height: 50%;
-width: 25%;
+    float: left;
+    height: 50%;
+    width: 25%;
     text-transform: uppercase;
     box-sizing: border-box;
 
 }
 
 p {
-
     text-transform: uppercase;
-
 }
 
 h1 {
@@ -227,7 +217,6 @@ h1 {
     font-weight: 800;
     margin: 0px;
     display: inline;
-
 }
 
 h2 {
@@ -236,7 +225,6 @@ h2 {
     margin: 0px;
     display: inline;
     text-transform: uppercase;
-
 }
 
 
@@ -246,15 +234,29 @@ h3 {
     font-weight: 800;
     margin: 0px;
     display: inline;
-color: red;
+    color: red;
 
 }
 
-#loading {width: 100%;height: 100%;top: 0px;left: 0px;position: fixed;display: block; z-index: 99}
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+    display: block;
+    z-index: 99
+}
 
-#loading-image {position: absolute;top: 40%;left: 45%;z-index: 100} 
+#loading-image {
+    position: absolute;
+    top: 40%;
+    left: 45%;
+    z-index: 100
+}
 
 /* Dropdown Button */
+
 .dropbtn {
     background-color: #2a75bb;
     color: white;
@@ -266,34 +268,43 @@ color: red;
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
+
+.dropbtn:hover,
+.dropbtn:focus {
     background-color: #2980B9;
 }
 
 /* The container <div> - needed to position the dropdown content */
+
 .dropdown {
     position: relative;
     display: inline-block;
     font-size: 12px;
-
 }
 
 /* Dropdown Content (Hidden by Default) */
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     width: 500px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+
+.dropdown-content a:hover {
+    background-color: #ddd
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+
+.show {
+    display: block;
+}
 
 .scrollable-menu {
     height: auto;
